<resources>
    <string name="app_name">OurDesign</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="high_design">High Design</string>
    <string name="low_design">Low Design</string>
    <string name="template">Template</string>
    <string name="personal">계정</string>
    <string name="text">Text</string>
    <string name="image_size">Image Size</string>
    <string name="edit_tool">Edit Tool</string>
    <string name="positive">확인</string>
    <string name="negative">취소</string>
    <string name="height">높이</string>
    <string name="width">넓이</string>
    <string name="change_image">이미지 바꾸기</string>
    <string name="delete">삭제</string>
    <string name="filter">필터</string>
</resources>