<?xml version="1.0" encoding="utf-8"?>
<!--
    이미지 클릭시 삭제 또는 추가 메뉴
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/standardBottomSheet"
    style="@style/bottom_sheet_row_style"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="?actionBarSize"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/ic_expand_less_black_36dp"
            android:textOff=""
            android:textOn=""
            android:text="" />

        <TextView
            android:id="@+id/editTool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Edit Tool"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            style="@style/bottom_sheet_row_style"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1">

            <ImageView
                style="@style/bottom_sheet_element_image_style"
                android:layout_width="48dp"
                android:layout_height="53dp"
                android:contentDescription="@string/text"
                android:src="@drawable/ic_add_photo_alternate_black_24dp" />

            <TextView
                style="@style/bottom_sheet_element_text_style"
                android:text="@string/change_image" />
        </LinearLayout>

        <LinearLayout
            style="@style/bottom_sheet_row_style"
            android:layout_weight="1">

            <ImageView
                style="@style/bottom_sheet_element_image_style"
                android:layout_width="48dp"
                android:layout_height="53dp"
                android:src="@drawable/ic_delete_black_24dp" />

            <TextView
                style="@style/bottom_sheet_element_text_style"
                android:text="@string/delete" />
        </LinearLayout>

        <LinearLayout
            style="@style/bottom_sheet_row_style"
            android:layout_weight="1">

            <ImageView
                style="@style/bottom_sheet_element_image_style"
                android:layout_width="48dp"
                android:layout_height="53dp"
                android:src="@drawable/ic_color_lens_black_24dp" />

            <TextView
                style="@style/bottom_sheet_element_text_style"
                android:text="@string/filter" />
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
