<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                style="@style/bottom_sheet_row_style"
                android:layout_gravity="center">

                <ImageView
                    style="@style/bottom_sheet_element_image_style"
                    android:contentDescription="@string/text"
                    android:src="@drawable/ic_text_format_black_48dp" />

                <TextView
                    style="@style/bottom_sheet_element_text_style"
                    android:text="@string/text" />
            </LinearLayout>

            <LinearLayout style="@style/bottom_sheet_row_style">

                <ImageView
                    style="@style/bottom_sheet_element_image_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/text"
                    android:src="@drawable/ic_text_format_black_48dp" />

                <TextView
                    style="@style/bottom_sheet_element_text_style"
                    android:text="@string/image_size" />
            </LinearLayout>

            <LinearLayout style="@style/bottom_sheet_row_style">

                <ImageView
                    style="@style/bottom_sheet_element_image_style"
                    android:src="@drawable/ic_text_format_black_48dp" />

                <TextView
                    style="@style/bottom_sheet_element_text_style"
                    android:text="@string/template" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                style="@style/bottom_sheet_row_style"
                android:layout_gravity="center">

                <ImageView
                    style="@style/bottom_sheet_element_image_style"
                    android:contentDescription="@string/text"
                    android:src="@drawable/ic_text_format_black_48dp" />

                <TextView
                    style="@style/bottom_sheet_element_text_style"
                    android:text="@string/text" />
            </LinearLayout>

            <LinearLayout style="@style/bottom_sheet_row_style">

                <ImageView
                    style="@style/bottom_sheet_element_image_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/text"
                    android:src="@drawable/ic_text_format_black_48dp" />

                <TextView
                    style="@style/bottom_sheet_element_text_style"
                    android:text="@string/image_size" />
            </LinearLayout>

            <LinearLayout style="@style/bottom_sheet_row_style">

                <ImageView
                    style="@style/bottom_sheet_element_image_style"
                    android:src="@drawable/ic_text_format_black_48dp" />

                <TextView
                    style="@style/bottom_sheet_element_text_style"
                    android:text="@string/template" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>